# python-telegram-bot-seed

./: .editorconfig  .gitignore  Pipfile  README.md  commands.py  main.py  makefile  pyproject.toml
bot/: start.py  test.py
configurations/: bot_config.py  settings.py
utils/: logger.py
